--- a/app.yaml
+++ b/app.yaml
@@ -9,7 +9,14 @@ skip_files: false
 
 env_variables:
   # The values here will override those in ".env". This is useful for
-  # production-specific configuration. However, feel free to set these
-  # values in ".env" instead if you prefer.
+  # production-specific configuration. However, feel free to set these values
+  # in ".env" instead if you prefer.
   APP_LOG: errorlog
   STORAGE_DIR: /tmp
+  CACHE_DRIVER: database
+  SESSION_DRIVER: database
+  ## Set these environment variables according to your CloudSQL configuration.
+PRODUCTION_CLOUD_SQL_INSTANCE: '/cloudsql/gestion-usuarios:paygo'
+ PRODUCTION_DB_USERNAME: 'root'
+ PRODUCTION_DB_PASSWORD: 'root'
+ PRODUCTION_DB_NAME: 'paygo'
